fix (table of contents): remove inline-display since it causes misalignments in the bullet and text-decoration of links

--- a/src/block/table-of-contents/style.scss
+++ b/src/block/table-of-contents/style.scss
@@ -5,11 +5,6 @@
 		column-gap: 32px;
 	}
 
-	// Needed by margin bottom / row gap.
-	a {
-		display: inline-block;
-	}
-
 	:is(ul, ol) {
 		padding-inline-start: 1em;
 	}
